--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
     <center>
         <h1>Welcome to Decho Dev. Quick Services</h1>
-        <a href="qr.html"><button>QRCode Generator</button></a>
-        <a href="bar.html"><button>Barcode Generator</button></a>
-        <a href="password.html"><button>Password Generator</button></a>
+        <a href="qr.html" target="_blank"><button>QRCode Generator</button></a>
+        <a href="bar.html" target="_blank"><button>Barcode Generator</button></a>
+        <a href="password.html" target="_blank"><button>Password Generator</button></a>
     </center>
 </body>
 </html>
