--- a/password.html
+++ b/password.html
@@ -76,7 +76,7 @@
     </label>
 
     <button onclick="generatePassword()">Generate Password</button>
-
+    <b><mark>Notice :</mark> No Passwords Has Been Saved</b>
     <div class="result" id="passwordResult"></div>
 </div>
 
